--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -208,11 +208,11 @@
             android:gravity="center"
             android:text="Aktuelles Level"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/lvlbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/frameLayout"
-            app:layout_constraintVertical_bias="0.32999998" />
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+            app:layout_constraintVertical_bias="0.26999998" />
 
         <TextView
             android:id="@+id/progressabsolute"
@@ -221,12 +221,24 @@
             android:gravity="center"
             android:text="Aktuelles Level"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/lvlbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+            app:layout_constraintVertical_bias="0.66999996" />
+
+        <TextView
+            android:id="@+id/steps_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Schritte gesamt: 0"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/frameLayout"
-            app:layout_constraintVertical_bias="0.42000002" />
-
+            app:layout_constraintTop_toBottomOf="@+id/lvlbar"
+            app:layout_constraintVertical_bias="0.0" />
         <TextView
             android:id="@+id/currentlvl"
             android:layout_width="wrap_content"
@@ -235,11 +247,11 @@
             android:text="0"
             android:textColor="@color/orange"
             android:textSize="40sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/lvlbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/frameLayout"
-            app:layout_constraintVertical_bias="0.37" />
+            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+            app:layout_constraintVertical_bias="0.42000002" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
