--- a/app/src/main/res/layout/fragment_stepcounter.xml
+++ b/app/src/main/res/layout/fragment_stepcounter.xml
@@ -14,43 +14,41 @@
         android:layout_height="61dp"
         android:text="Schritte: "
         android:textColor="@color/cold_dark_blue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.554"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.297" />
+        android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="@+id/stepBar"
+        app:layout_constraintEnd_toEndOf="@+id/stepBar"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="@+id/stepBar"
+        app:layout_constraintTop_toTopOf="@+id/stepBar"
+        app:layout_constraintVertical_bias="0.53" />
 
     <ProgressBar
         android:id="@+id/stepBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="198dp"
-        android:layout_height="183dp"
+        android:layout_width="290dp"
+        android:layout_height="255dp"
         android:layout_centerInParent="true"
-        android:layout_marginStart="93dp"
-        android:layout_marginLeft="93dp"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="120dp"
-        android:layout_marginRight="120dp"
-        android:layout_marginBottom="218dp"
         android:indeterminate="false"
         android:progress="0"
         android:progressDrawable="@drawable/circular_progress_bar"
         android:secondaryProgress="300"
-        app:layout_constraintBottom_toTopOf="@+id/reset_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.239" />
 
     <Button
         android:id="@+id/step_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Increase"
+        android:textSize="16sp"
         app:backgroundTint="@color/cold_dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.76"
+        app:layout_constraintHorizontal_bias="0.87"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.89" />
@@ -60,13 +58,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Reset"
+        android:textSize="16sp"
         app:backgroundTint="@color/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.76"
+        app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.78" />
+        app:layout_constraintVertical_bias="0.89" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
