--- a/app/src/main/res/layout/placeholder.xml
+++ b/app/src/main/res/layout/placeholder.xml
@@ -16,7 +16,7 @@
         app:srcCompat="@mipmap/silhouette" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewRecycle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bezwinge deinen Everest!"
