--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -1,21 +1,52 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:gravity="center_vertical">
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
-    <TextView
-        android:id="@+id/textViewRecycle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/element_text"/>
 
-    <ImageView
-        android:id="@+id/imageViewRecycle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        app:srcCompat="@drawable/test" />
-</FrameLayout>
+    <FrameLayout
+        android:layout_width="423dp"
+        android:layout_height="359dp"
+        android:background="@color/cold_medium_blue"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.234">
+
+
+        <TextView
+            android:id="@+id/textViewRecycle"
+            android:layout_width="164dp"
+            android:layout_height="50dp"
+            android:layout_gravity="left"
+            android:text="@string/element_text"
+            android:textColor="@color/white"
+            android:textSize="15dp" />
+
+        <ImageView
+            android:id="@+id/imageViewRecycle"
+            android:layout_width="418dp"
+            android:layout_height="229dp"
+            android:layout_marginTop="50dp"
+            app:srcCompat="@drawable/test" />
+
+        <ImageButton
+            android:id="@+id/imageButtonLikes"
+            android:layout_width="62dp"
+            android:layout_height="55dp"
+            android:layout_gravity="right"
+            app:srcCompat="@drawable/like" />
+
+        <TextView
+            android:id="@+id/textViewLikes"
+            android:layout_width="71dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="150dp"
+            android:text="TextView" />
+    </FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
