--- a/app/src/main/res/layout/friends_main.xml
+++ b/app/src/main/res/layout/friends_main.xml
@@ -56,5 +56,42 @@
         app:layout_constraintVertical_bias="0.378" />
 
 
+
+
+    <TextView
+        android:id="@+id/challenge_friends"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Challenges:"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.45" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8">
+
+        <ListView
+            android:id="@+id/listView_friends"
+
+            android:layout_width="413dp"
+            android:layout_height="294dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.79" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
