--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -8,14 +8,23 @@
 
     <TextView
         android:id="@+id/textViewRecycle"
+        android:paddingVertical="33dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/element_text"/>
+        android:text="@string/element_text"
+        android:textSize="18sp"/>
 
     <ImageView
         android:id="@+id/imageViewRecycle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        app:srcCompat="@drawable/test" />
+         />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
 </FrameLayout>
