--- a/app/src/main/res/layout/friends_main.xml
+++ b/app/src/main/res/layout/friends_main.xml
@@ -73,7 +73,7 @@
 
     <ListView
         android:id="@+id/listView_friends"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
