--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background_mountains"
+    android:background="@mipmap/berge_app"
     tools:context=".User.Login">
     <TextView
         android:id="@+id/textView2"
@@ -28,8 +28,8 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:hint="Mail"
-        android:textColorHint="@color/background"
-        android:textColor="@color/background"
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
