--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/prename"
-    android:background="@mipmap/background_mountains"
+    android:background="@mipmap/berge_app"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".User.Register">
@@ -127,8 +127,8 @@
         android:layout_height="60dp"
         android:ems="10"
         android:hint="Nachname"
-        android:textColor="@color/background"
-        android:textColorHint="@color/background"
+        android:textColor="@color/cold_dark_blue"
+        android:textColorHint="@color/cold_dark_blue"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
