--- a/app/src/main/res/layout/fragment_stepcounter.xml
+++ b/app/src/main/res/layout/fragment_stepcounter.xml
@@ -15,6 +15,7 @@
         android:text="Schritte: "
         android:textColor="@color/cold_dark_blue"
         android:textSize="19sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/stepBar"
         app:layout_constraintEnd_toEndOf="@+id/stepBar"
         app:layout_constraintHorizontal_bias="0.52"
