--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -21,7 +21,7 @@
         android:icon="@drawable/ic__0117386491556281663"
         android:title="@string/sozial" />
     <item
-        android:id="@+id/logout_bar"
+        android:id="@+id/insta"
         android:enabled="true"
         android:icon="@drawable/ic_menu_camera"
         android:title="Galerie " />
